--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test:unit": "jest --config ./tests/unit/jest.config.js",
-    "test:e2e": "OKOZE_PORT=3000 jest --config ./tests/e2e/jest.config.js"
+    "test:e2e": "NODE_ENV=test OKOZE_PORT=3000 OKOZE_ORIGIN_PORT=3080 jest --config ./tests/e2e/jest.config.js --detectOpenHandles"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -22,12 +22,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
+    "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.12.0",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "faker": "^4.1.0",
     "jest": "^24.5.0",
     "prettier": "^1.16.4",
     "ts-jest": "^24.0.0",
