--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "prettier": "^1.16.4",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.4000"
+  },
+  "engines": {
+    "node": ">=8.10.0"
   }
 }
