--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test:unit": "jest --config ./tests/unit/jest.config.js",
-    "test:e2e": "NODE_ENV=test OKOZE_PORT=3000 OKOZE_ORIGIN_PORT=3080 jest --config ./tests/e2e/jest.config.js --detectOpenHandles"
+    "test:e2e": "run-s test:e2e:*",
+    "test:e2e:node": "NODE_ENV=test TEST_TARGET=node OKOZE_PORT=3000 OKOZE_ORIGIN_PORT=3080 OKOZE_SNAPSHOT_DIR=./tests/e2e jest --config ./tests/e2e/jest.config.js --detectOpenHandles",
+    "test:e2e:browser": "NODE_ENV=test TEST_TARGET=browser OKOZE_PORT=3000 OKOZE_ORIGIN_PORT=3080 OKOZE_SNAPSHOT_DIR=./tests/e2e jest --config ./tests/e2e/jest.config.js --detectOpenHandles"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -25,13 +27,16 @@
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.12.0",
+    "@types/rimraf": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
     "eslint": "^5.15.3",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
     "faker": "^4.1.0",
     "jest": "^24.5.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
+    "rimraf": "^2.6.3",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.4000"
   },
