--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "okoze",
   "description": "Okoze is stub server that returns a response using a snapshot of the real server's response.",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "main": "index.js",
   "repository": "https://github.com/mya-ake/okoze.git",
   "bugs": {
@@ -9,16 +9,21 @@
   },
   "author": "mya-ake <make.app.ts@gmail.com>",
   "license": "MIT",
+  "bin": {
+    "okoze": "dist/src/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "clean": "rimraf dist",
     "test:unit": "jest --config ./tests/unit/jest.config.js",
-    "test:e2e": "run-s test:e2e:*",
-    "test:e2e:node": "NODE_ENV=test TEST_TARGET=node OKOZE_PORT=3000 OKOZE_ORIGIN_PORT=3080 OKOZE_SNAPSHOT_DIR=./tests/e2e jest --config ./tests/e2e/jest.config.js --detectOpenHandles",
-    "test:e2e:browser": "NODE_ENV=test TEST_TARGET=browser OKOZE_PORT=3000 OKOZE_ORIGIN_PORT=3080 OKOZE_SNAPSHOT_DIR=./tests/e2e jest --config ./tests/e2e/jest.config.js --detectOpenHandles"
+    "test:e2e": "run-s clean test:e2e:*",
+    "test:e2e:node": "NODE_ENV=test TEST_TARGET=node jest --config ./tests/e2e/jest.config.js --detectOpenHandles",
+    "test:e2e:browser": "NODE_ENV=test TEST_TARGET=browser jest --config ./tests/e2e/jest.config.js --detectOpenHandles"
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "cac": "^6.4.2",
     "consola": "^2.5.7",
     "express": "^4.16.4"
   },
