--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,16 @@
     "target": "ES2018",
     "module": "commonjs",
     "lib": ["es5"],
-    "types": ["node", "jest", "express", "faker"],
+    "types": ["node", "express"],
     "declaration": true,
     "outDir": "./dist",
     "removeComments": true,
     "moduleResolution": "node",
     "strict": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "baseUrl": "."
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "./**/.json"],
   "exclude": ["node_modules"]
 }
