--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "start": "node dist/index.js",
     "clean": "rimraf dist",
     "test:e2e": "run-s clean test:e2e:*",
-    "test:e2e:node": "NODE_ENV=test TEST_TARGET=node jest --config ./tests/e2e/jest.config.js --detectOpenHandles",
-    "test:e2e:browser": "NODE_ENV=test TEST_TARGET=browser jest --config ./tests/e2e/jest.config.js --detectOpenHandles"
+    "test:e2e:node": "NODE_ENV=test TEST_TARGET=node jest --config ./tests/e2e/jest.config.js --detectOpenHandles --runInBand",
+    "test:e2e:browser": "NODE_ENV=test TEST_TARGET=browser jest --config ./tests/e2e/jest.config.js --detectOpenHandles --runInBand"
   },
   "dependencies": {
     "axios": "^0.18.0",
