--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "axios": "^0.18.0",
     "cac": "^6.4.2",
     "consola": "^2.5.7",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
@@ -40,7 +41,6 @@
     "jest": "^24.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.16.4",
-    "rimraf": "^2.6.3",
     "ts-jest": "^24.0.0",
     "typescript": "^3.3.4000"
   },
