feat: Supports configuration file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2018",
     "module": "commonjs",
     "lib": ["es5"],
-    "types": ["node", "express"],
+    "types": ["node", "express", "lodash"],
     "declaration": true,
     "outDir": "./dist",
     "removeComments": true,
