--- a/package.json
+++ b/package.json
@@ -16,21 +16,24 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "clean": "rimraf dist",
+    "test:unit": "NODE_ENV=test jest --config ./tests/unit/jest.config.js",
     "test:e2e": "run-s clean test:e2e:*",
-    "test:e2e:node": "NODE_ENV=test TEST_TARGET=node jest --config ./tests/e2e/jest.config.js --detectOpenHandles --runInBand",
-    "test:e2e:browser": "NODE_ENV=test TEST_TARGET=browser jest --config ./tests/e2e/jest.config.js --detectOpenHandles --runInBand"
+    "test:e2e:node": "NODE_ENV=test TEST_TARGET=node jest --config ./tests/e2e/jest.config.js --detectOpenHandles",
+    "test:e2e:browser": "NODE_ENV=test TEST_TARGET=browser jest --config ./tests/e2e/jest.config.js --detectOpenHandles"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "cac": "^6.4.2",
     "consola": "^2.5.7",
     "express": "^4.16.4",
+    "lodash.mergewith": "^4.6.1",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.11",
+    "@types/lodash.mergewith": "^4.6.6",
     "@types/node": "^11.12.0",
     "@types/rimraf": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^1.5.0",
