--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "axios": "^0.18.0",
     "cac": "^6.4.2",
     "consola": "^2.5.7",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "lodash.mergewith": "^4.6.1",
     "object-hash": "^1.3.1",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.4",
     "@types/express": "^4.16.1",
     "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.11",
