--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "clean": "rimraf dist",
+    "lint": "eslint --ext .ts .",
+    "lint:fix": "eslint --ext .ts --fix .",
     "test:unit": "NODE_ENV=test jest --config ./tests/unit/jest.config.js",
     "test:e2e": "run-s clean test:e2e:*",
     "test:e2e:node": "NODE_ENV=test TEST_TARGET=node jest --config ./tests/e2e/jest.config.js --detectOpenHandles",
@@ -23,35 +25,36 @@
     "release": "np"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "cac": "^6.4.2",
-    "consola": "^2.5.7",
+    "axios": "^0.19.0",
+    "cac": "^6.5.2",
+    "consola": "^2.9.0",
     "cors": "^2.8.5",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "lodash.mergewith": "^4.6.1",
     "object-hash": "^1.3.1",
     "rimraf": "^2.6.3"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.4",
-    "@types/express": "^4.16.1",
+    "@types/cors": "^2.8.5",
+    "@types/express": "^4.17.0",
     "@types/faker": "^4.1.5",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.15",
     "@types/lodash.mergewith": "^4.6.6",
-    "@types/node": "^11.12.0",
-    "@types/object-hash": "^1.2.0",
+    "@types/node": "^12.0.10",
+    "@types/object-hash": "^1.3.0",
     "@types/rimraf": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "eslint": "^5.15.3",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "eslint": "5.x",
+    "eslint-config-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "faker": "^4.1.0",
-    "jest": "^24.5.0",
+    "jest": "^24.8.0",
     "np": "^4.0.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.16.4",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.3.4000"
+    "prettier": "^1.18.2",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.5.2"
   },
   "engines": {
     "node": ">=8.10.0"
